# my-claude-skills

InvestmentOS/: .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt
InvestmentOS/config/: sector_valuation_profiles.py  valuation_profiles.py  valuation_thresholds.py
InvestmentOS/docs/: AI_ARCHITECTURE.md  API_SPECIFICATION.md  ARCHITECTURE.md  BUSINESS_RULES.md  DATA_MODEL.md  DECISION_CARD_UI.md  DECISION_FRAMEWORK.md  DEVELOPMENT_STANDARDS.md  EVIDENCE_RULEBOOK.md  INTEGRATION_ARCHITECTURE.md  PRODUCT_REQUIREMENTS.md  PROJECT_MAP.md  RISK_RULEBOOK.md  ROADMAP.md  SCORING_FRAMEWORK.md  SCORING_RULEBOOK.md  TECHNOLOGY_DECISIONS.md  TECHNOLOGY_STACK.md  VALUATION_FRAMEWORK.md  VISION.md
InvestmentOS/engines/: company_engine.py  decision_engine.py  decision_rules_engine.py  evidence_engine.py  financial_engine.py  report_engine.py  risk_engine.py  scoring_engine.py  technical_engine.py  validation_engine.py  valuation_engine.py
InvestmentOS/knowledge/: business-analysis.md  financial-analysis.md  financial_rules.py  financial_thresholds.py  valuation.md
InvestmentOS/models/: analysis_context.py  company_profile.py  decision_card.py  decision_result.py  decision_rules_engine.py  financial_score.py  investment_request.py  risk_profile.py  score_profile.py  technical_score.py  valuation_score.py
InvestmentOS/providers/: market_data_provider.py  yahoo_provider.py
InvestmentOS/specifications/: ENGINE_DESIGN_GUIDE.md  EVIDENCE_ENGINE_SPECIFICATION.md  PORTFOLIO_ENGINE_SPECIFICATION.md  RISK_ENGINE_SPECIFICATION.md  VALIDATION_ENGINE_SPECIFICATION.md
(+11 files in other folders)
